Add Save data to Database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.rssreader">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RssReader">
-        <activity android:name=".ReadRssActivity"></activity>
+        <activity
+            android:name=".ReadRssActivity"
+            android:label="@string/title_activity_read_rss" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
